--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -3,8 +3,14 @@
   border: 4px solid midnightblue;
   width: 400px;
   height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
+/* Add flex display to container
+   justify-content aligns on main axis
+   align-items aligns cross axis*/
+   
 .box {
   background: palevioletred;
   font-weight: bold;
