--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,24 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: block;
+  text-align: center;
+}
+
+.allplant {
+  display: flex;
+  margin: 32px;
+  gap: 52px;
+  justify-content: center;
+}
+
+.plant {
+  flex-basis: 200px;
+  text-align: center;
+}
+
+.text {
+  text-align: center;
 }
 
 /* do not edit this footer */
