--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -13,8 +13,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   align-items: center;
-  padding: 16px;
-  flex: 0;
+  padding: 0 16px;
 }
 
 .footer {
@@ -30,15 +29,16 @@ body {
   background: royalblue;
   box-sizing: border-box;
   flex-shrink: 0;
+  padding: 16px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
-  flex-basis: 300px;
+  width: 300px;
   padding: 16px;
-  flex-shrink: 0;
+  margin: 16px;
 }
 
 .container {
@@ -48,11 +48,12 @@ body {
 
 ul {
   list-style-type: none;
-  padding: 16px;
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
+  padding: 0;
   margin: 0;
+}
+
+li {
+  margin-bottom: 16px;
 }
 
 a {
@@ -69,7 +70,5 @@ a {
 .text {
   display: flex;
   flex-wrap: wrap;
-  flex: 1;
-  padding: 50px;
-  gap: 32px;
+  padding: 32px;
 }
